maze.lessons.maze.island.IslandMaze.scala.error
Escaper:23: error: type mismatch;
 found   : Unit
 required: ?{def x: ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method any2Ensuring in object Predef of type [A](x: A)Ensuring[A]
 and method any2ArrowAssoc in object Predef of type [A](x: A)ArrowAssoc[A]
 are possible conversion functions from Unit to ?{def x: ?}
    		droite();droite() x = x+2;
                               ^Escaper:23: error: value x is not a member of Unit
    		droite();droite() x = x+2;
                                  ^Escaper:38: error: type mismatch;
 found   : Unit
 required: ?{def x: ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method any2Ensuring in object Predef of type [A](x: A)Ensuring[A]
 and method any2ArrowAssoc in object Predef of type [A](x: A)ArrowAssoc[A]
 are possible conversion functions from Unit to ?{def x: ?}
    		gauche() x = x+1;
                      ^Escaper:38: error: value x is not a member of Unit
    		gauche() x = x+1;
                         ^